@@ -1,3 +1,7 @@
+2025-10-13  Robby Stephenson  <robby@periapsis.org>
+
+	* Updated iTunes source for better movie results.
+
 2025-10-06  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed bug with matching entries with 979 ISBN prefixes (Bug 510329).
